Revert "jewel-sectioncontent: fix an issue with sizing in components inside SectionContent containers. Since SC default state is hidden, that made components inside report 0 for width and height instead getting the right size, This should hopefully solve other layout issues"
This reverts commit 2af3137baccfcc2df5ea500edef4b8eced3a320a.

--- a/frameworks/projects/Jewel/src/main/resources/defaults.css
+++ b/frameworks/projects/Jewel/src/main/resources/defaults.css
@@ -3504,8 +3504,7 @@ j|PopUp {
   }
 }
 .jewel.section {
-  display: flex;
-  visibility: hidden;
+  display: none;
   flex-flow: column nowrap;
   height: 100%;
 }
@@ -3513,7 +3512,7 @@ j|PopUp {
   flex: 0 0 auto;
 }
 .jewel.section.is-selected {
-  visibility: visible;
+  display: flex;
 }
 
 j|SectionContent {
